[package]
name = "space_traders"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tokio = { version = "1.28.0", features = ["full"] }

[dependencies]
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
