[package]
name = "space_traders"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
uuid = { version = "1.3.2", features = ["v4", "fast-rng"] }
tokio = { version = "1.28.0", features = ["full"] }
tokio-test = "0.4.2"
dotenv = "0.15.0"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
